[package]
name = "chkdir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
md-5 = "0.10.5"
num_cpus = "1.15.0"
threadpool = "1.8.1"
